--- a/styles/style.css
+++ b/styles/style.css
@@ -12,37 +12,45 @@ a {
     margin-left: 15vw;
     margin-right: 15vw;
     margin-top: 150px;
-    margin-bottom: 150px;
+    margin-bottom: 10px;
     width: 70vw;
 }
 
 #logo img {
     display: block;
     margin: 0 auto;
+    margin-bottom: 30px;
 }
 
 #moreSearch {
     font-size: 10px;
-    float: right;
     width: 100px;
     padding: 5px;
+    float: right;
 }
 
 #textSearch {
-    align-self: center;
-    width: 500px;
-    margin-left: 10%;
+    width: 470px;
+
 }
+
 #bar {
-    display: flex;
+    width: 600px;
+    display: block;
     margin: 0 auto;
 }
+
 #buttons {
+    display: block;
+    margin: 0 auto;
     text-align: center;
 }
 button {
     margin: 20px;
     padding: 5px;
+    background-color: rgb(219, 218, 218);
+    border: 1px rgb(219, 218, 218) outset;
+    border-radius: 5px;
 }
 #navbar {
     width: 100%;
@@ -71,7 +79,7 @@ button {
 }
 footer {
     text-align: center;
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 #moreGoogle {
